# ethplorer-x-signal-finder

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: decisions.md  project-spec.md  roadmap.md
knowledge/: assets_catalog.csv  shared-analytics-terminology.md  source_documents.md  x-signal-terminology.md
migrations/: 001_initial_schema.sql  README.md
prompts/: context_enrichment.md  draft_generator.md  opportunity_gate.md  relevance_filter.md  signal_clustering.md
scripts/: README.md
src/x_signal_finder/: __init__.py  __main__.py  cli.py  config.py
src/x_signal_finder/db/: __init__.py  checks.py  connection.py  migrations.py  repository.py
tests/: README.md  test_cli.py  test_config.py  test_migrations.py  test_postgres_integration.py  test_repository.py
