[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ethplorer-x-signal-finder"
version = "0.1.0"
description = "AI-assisted X intelligence pipeline foundation for Ethplorer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Ethplorer" },
]
dependencies = [
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
x-signal-finder = "x_signal_finder.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: requires an explicitly configured PostgreSQL test database",
]
